--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,16 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
-html {
-  height: 100%;
-  //font-size: 62.5%;
-  font-family: 'Inter', system-ui, sans-serif;
+html, body {
+    height: 100%;
 }
 
 body {
-  height: 100%;
-  //font-size: 1.6rem;
   margin: 0;
+  font-family: 'Inter', system-ui, sans-serif;
 }
 
 @layer utilities {
