--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="w-full h-[calc(100%-80px)] overflow-y-auto">
-    <router-outlet class="w-full h-full" />
+    <router-outlet />
 </div>
 
 <app-navigation-bar />
