--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,12 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
-html, body {
-    height: 100%;
+html, body, app-root {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
 }
 
 body {
-  margin: 0;
   font-family: 'Inter', system-ui, sans-serif;
 }
 
