Add search function. Make pwa compatible. Fix marker disappearing at screen edge. Add navigation bar drop shadow

--- a/src/app/components/navigation-bar/navigation-bar.component.html
+++ b/src/app/components/navigation-bar/navigation-bar.component.html
@@ -1,4 +1,4 @@
-<nav class="fixed bottom-0 w-full h-20 bg-gray-50 flex justify-around items-center font-medium">
+<nav class="fixed bottom-0 w-full h-20 bg-gray-50 flex justify-around items-center font-medium" style="box-shadow: 0 -1px 5px rgba(0,0,0,0.1);">
   <button
     *ngFor="let tab of tabs"
     [routerLink]="['/' + tab.route]"
