--- a/src/app/components/departure-list/departure-list.component.html
+++ b/src/app/components/departure-list/departure-list.component.html
@@ -60,5 +60,5 @@
 }
 
 @else () {
-<div class="flex justify-center items-center h-full font-bold text-lg">Heute noch keine Starts</div>
+<div class="flex justify-center items-center h-full font-semibold text-lg">Heute noch keine Starts</div>
 }
