Show aircraft on map in search results is now possible (also for aircraft where last signal is longer ago than 30 min)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="w-full h-[calc(100%-80px)] overflow-y-auto">
+<div class="w-full h-[calc(100%-80px)] overflow-y-auto overscroll-auto">
     <router-outlet />
 </div>
 
