Add swiper to mobile detail view (original flight info sheet) to prepare for barogram

--- a/src/app/components/map/map.component.html
+++ b/src/app/components/map/map.component.html
@@ -12,7 +12,7 @@
 
 
 @if (selectedAircraftFlightData()) {
-    <app-flight-info-sheet 
+    <app-detail-view-mobile
         class="absolute bottom-20 left-0 right-0"
         [flight]="selectedAircraftFlightData()"
         (close)="unselectGlider()"/>
