--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -4,9 +4,10 @@
   <div class="sticky top-0 z-10 bg-gray-50 p-4 pb-2">
     <div class="w-full px-4 py-2 rounded-full bg-white shadow-md text-sm text-gray-700 flex items-center gap-2">
       <span class="material-symbols-outlined text-gray-500 text-xl" (click)="router.navigate(['/'])">arrow_back</span>
-      <input #searchInput type="text" placeholder="Suchen"
+      <input #searchInput type="text" placeholder="z.B. Kennzeichen, Modell, Eigentümer" [value]="currentSearchText()"
         class="flex-1 text-base text-gray-800 bg-transparent focus:outline-none" (input)="searchAircraft($event)"
         autofocus />
+      <span class="material-symbols-outlined text-gray-500 text-xl ml-auto" (click)="clearSearchText()">close</span>
     </div>
   </div>
 
@@ -63,8 +64,11 @@
 
     </div>
 
+    <!-- @if (currentSearchText().length === 0) {
+    <div class="flex justify-center text-center m-12 h-full font-medium text-gray-800 text-base">Warte auf Eingabe</div>
+    } -->
     @if (searchResults().length === 0) {
-    <div class="flex justify-center items-center h-full font-semibold text-lg">Keine Suchergebnisse</div>
+    <div class="flex justify-center m-16 h-full font-medium text-gray-800 text-base">Keine Suchergebnisse</div>
     }
 
     @if (searchResults().length > 20) {
