Implement barogram with apex-charts package

--- a/src/app/components/detail-view-mobile/detail-view-mobile.component.html
+++ b/src/app/components/detail-view-mobile/detail-view-mobile.component.html
@@ -17,10 +17,10 @@
   </div>
 
   <swiper-container slides-per-view="1" pagination="true" class="custom-swiper">
-    <swiper-slide class="px-4 pb-8">
+    <swiper-slide class="px-4 pb-14">
       <app-flight-info-sheet [flight]="flight()" (close)="close.emit()" />
     </swiper-slide>
-    <swiper-slide class="px-4 pb-8">
+    <swiper-slide class="px-4 pb-2 w-[110%]">
       <app-barogram />
     </swiper-slide>
   </swiper-container>
