--- a/src/app/components/barogram/barogram.component.html
+++ b/src/app/components/barogram/barogram.component.html
@@ -1,2 +1,11 @@
-<p>Barogram</p>
-<p>History Entries: {{flightHistory().length}}</p>
+<apx-chart
+    #chartRef
+  *ngIf="chartOptions() as options"
+  [series]="options.series"
+  [chart]="options.chart"
+  [xaxis]="options.xaxis"
+  [yaxis]="options.yaxis"
+  [stroke]="options.stroke"
+  [dataLabels]="options.dataLabels"
+  [tooltip]="options.tooltip"
+/>
