Optimize barogram layout and styling

--- a/src/app/components/detail-view-mobile/detail-view-mobile.component.html
+++ b/src/app/components/detail-view-mobile/detail-view-mobile.component.html
@@ -20,7 +20,7 @@
     <swiper-slide class="px-4 pb-14">
       <app-flight-info-sheet [flight]="flight()" (close)="close.emit()" />
     </swiper-slide>
-    <swiper-slide class="px-4 pb-2 w-[110%]">
+    <swiper-slide class="pb-2 -mt-4 pr-3 w-[110%]">
       <app-barogram />
     </swiper-slide>
   </swiper-container>
