--- a/src/app/components/map/map.component.html
+++ b/src/app/components/map/map.component.html
@@ -10,10 +10,10 @@
   </a>
 </div>
 
-
 @if (selectedAircraftFlightData() || historicFlightTarget()) {
-    <app-detail-view-mobile
-        class="absolute bottom-20 left-0 right-0"
-        [flight]="selectedAircraftFlightData()"
-        (close)="closeDetailView()"/>
+  <app-detail-view-mobile
+    class="absolute bottom-20 left-0 right-0"
+    [flight]="selectedAircraftFlightData()"
+    (close)="closeDetailView()"
+  />
 }
