--- a/src/app/components/shared/toggle/toggle.component.html
+++ b/src/app/components/shared/toggle/toggle.component.html
@@ -1,10 +1,19 @@
 <div class="flex items-center justify-between bg-white rounded-xl">
-    <span class="text-sm font-medium text-gray-700">{{ label() }}</span>
-    <button type="button" role="switch" [attr.aria-checked]="value()"
-        class="relative inline-flex h-6 w-11 items-center rounded-full transition-colors" [class.bg-blue-600]="value()"
-        [class.bg-gray-300]="!value()" (click)="toggle()">
-        <span class="sr-only">Toggle {{ label() }}</span>
-        <span class="inline-block h-4 w-4 transform rounded-full bg-white transition" [class.translate-x-6]="value()"
-            [class.translate-x-1]="!value()"></span>
-    </button>
+  <span class="text-sm font-medium text-gray-700">{{ label() }}</span>
+  <button
+    type="button"
+    role="switch"
+    [attr.aria-checked]="value()"
+    class="relative inline-flex h-6 w-11 items-center rounded-full transition-colors"
+    [class.bg-blue-600]="value()"
+    [class.bg-gray-300]="!value()"
+    (click)="toggle()"
+  >
+    <span class="sr-only">Toggle {{ label() }}</span>
+    <span
+      class="inline-block h-4 w-4 transform rounded-full bg-white transition"
+      [class.translate-x-6]="value()"
+      [class.translate-x-1]="!value()"
+    ></span>
+  </button>
 </div>
