--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,7 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-html, body, app-root {
+html,
+body,
+app-root {
   height: 100%;
   width: 100%;
   margin: 0;
