--- a/src/app/components/detail-view-mobile/detail-view-mobile.component.html
+++ b/src/app/components/detail-view-mobile/detail-view-mobile.component.html
@@ -35,7 +35,7 @@
       <button
         (click)="close.emit()"
         class="bg-gray-100 rounded-full w-8 h-8 flex items-center justify-center active:bg-gray-200"
-        title="Link kopieren"
+        title="Schließen"
       >
         <span class="material-symbols-outlined text-gray-800 text-base">close</span>
       </button>
